# marktypist

./: .gitignore  README.md  pyproject.toml
marktypist/: cli.py  main.py  md_parser.py  md_renderer.py  model.py  typ_parser.py  typ_renderer.py
src/marktypist.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_md_to_typ.py  test_typ_to_md.py
tests/fixtures/: basic.md  basic.typ
