# pyproject.toml

[project]
# --- 基本元数据 ---
name = "marktypist"
version = "0.1.0"  # 我们从 0.1.0 开始
description = "一个功能强大的 Markdown 和 Typst 双向转换器，致力于实现逻辑感知的高保真转换。"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" }, # 请替换成你的信息
]
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]

# --- 核心依赖 ---
# 这些是运行 marktypist 所必需的包
dependencies = [
    "markdown-it-py>=3.0.0",
    "mdit-py-plugins>=0.4.0", # 用于 GFM 表格等插件
    "typer[all]>=0.9.0",     # 使用 [all] 安装完整的 Typer (带 shell completion)
]

# --- 项目 URL ---
[project.urls]
Homepage = "https://github.com/your-username/marktypist"  # 替换成你的仓库 URL
Repository = "https://github.com/your-username/marktypist"

# --- CLI 入口点 ---
# 这会让 `pip install` 创建一个名为 `marktypist` 的可执行命令
[project.scripts]
marktypist = "marktypist.cli:app"

# --- 可选依赖（用于开发）---
# 使用 `pip install -e .[dev]` 来安装
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0", # 测试框架
    "black>=23.0.0", # 代码格式化工具
]

# --- 构建系统配置 ---
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"